Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: skillupnodejs-testing-service
spec:
  type: NodePort
  selector:
    app: skillupnodejs-testing
  ports:
    - protocol: TCP
      port: 9595
      targetPort: 9595
      nodePort: 31767
